--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.2'
+    implementation 'com.google.firebase:firebase-database:20.0.6'
+
+
 }
