--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
 
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+
     implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.2'
     implementation 'com.google.firebase:firebase-database:20.0.6'
 
